k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deploy
  namespace: three-tier

spec:
  replicas: 2
  
  selector:
    matchLabels:
      name: frontend-pod

  template:
    metadata:
      labels:
        name: frontend-pod

    spec:
      containers:
        - name: frontend-container
          image: docker.io/library/react-ui:1.0.0

          imagePullPolicy: Never

          ports:
            - name: http
              containerPort: 80

          readinessProbe:
            httpGet:
              path: /
              port: 80

            initialDelaySeconds: 3
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /
              port: 80

            initialDelaySeconds: 10
            periodSeconds: 10

          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            
            limits:
              cpu: 100m
              memory: 128Mi

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:

  type: ClusterIP

  selector:
    name: frontend-pod

  ports:
    - name: http
      port: 80
      targetPort: 80
