k8s/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: three-tier
spec:
  selector:
    name: postgres-pod

  type: ClusterIP

  ports:
    - name: postgres
      port: 5432
      targetPort: 5432

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-stf-set
  namespace: three-tier
spec:
  serviceName: postgres-service

  replicas: 1

  selector:
    matchLabels:
      name: postgres-pod
  
  template:
    metadata:
      labels:
        name: postgres-pod

    spec:
      containers:
        - name: postgres-container
          image: postgres:17-alpine

          ports:
            containerPort: 5432

          volumeMounts:
            - postgres-storage
              mountPath: /var/lib/postgresql/data

          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - pg_isready -U "$POSTGRES_USER" -d "$POSTGRES_DB"
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3

          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - pg_isready -U "$POSTGRES_USER" -d "$POSTGRES_DB"
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 5

          resources:
            requests:
              cpu: 100m
              memory: 128Mi

            limit:
              cpu: 200m
              memory: 256Mi

    volumes:
      - name: postgres-storage
        PersistentVolumeClaim:
          claimName: psotgres-pvc
