k8s/ingress.yaml
apiVersion: neworking.k8s.io/v1
kind: Ingress
metadata:
  name: three-tier-ingress
  namespace: three-tier

spec:
  ingressClassName: traefik

  rules:
    - host: app.lab

      http:
        pahts:

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8000

          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
